--- a/popup/popup.css
+++ b/popup/popup.css
@@ -2,7 +2,7 @@
 
 body {
   width: 256px;
-  height: 256px;
+  height: 224px;
   margin: 0;
   padding: 0;
   background-color: #15181C;
@@ -29,23 +29,18 @@ h1 {
   margin: 0;
 }
 
-#user-input {
+/* State 1 */
+#not-on-watchlist {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  flex: 1;
   gap: 10px;
   padding: 12px;
-  margin-top: 12px;
 }
-#user-input p {
-  color: #aaaaaa;
-  font-size: 13px;
-  margin: 0;
-  margin-bottom: -6px;
-}
-#user-input p.warning {
-  color: #FF8000;
-  font-size: 11px;
-  font-style: italic;
+#not-on-watchlist p {
+  color: #ff8000;
+  font-size: 14px;
   text-align: center;
   margin: 0;
 }
@@ -56,7 +51,7 @@ h1 {
   color: white;
   font-size: 14px;
   outline: none;
-  padding: 8px 10px;
+  padding: 8px 8px;
   width: 100%;
   box-sizing: border-box;
 }
@@ -66,7 +61,30 @@ h1 {
 #username:focus {
   border-color: #40bcf4;
 }
-#submit-btn {
+#go-btn {
+  background-color: #00E054;
+  border: none;
+  border-radius: 6px;
+  color: #15181C;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 8px;
+  width: 100%;
+}
+#go-btn:hover {
+  background-color: #00F060;
+}
+
+/* State 2 */
+#on-watchlist {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 12px;
+  margin-top: 12px;
+}
+#pick-btn {
   background-color: #00E054;
   border: none;
   border-radius: 6px;
@@ -77,8 +95,12 @@ h1 {
   padding: 9px;
   width: 100%;
 }
-#submit-btn:hover {
+#pick-btn:hover {
   background-color: #00F060;
+}
+
+.hidden {
+  display: none !important;
 }
 
 footer {
