--- a/popup/popup.css
+++ b/popup/popup.css
@@ -2,7 +2,6 @@
 
 body {
   width: 256px;
-  height: 224px;
   margin: 0;
   padding: 0;
   background-color: #15181C;
@@ -69,6 +68,7 @@ h1 {
   cursor: pointer;
   font-size: 14px;
   font-weight: bold;
+  margin-bottom: 24px;
   padding: 8px;
   width: 100%;
 }
@@ -78,11 +78,12 @@ h1 {
 
 /* State 2 */
 #on-watchlist {
+  align-items: center;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 10px;
-  padding: 12px;
-  margin-top: 12px;
+  padding: 42px 12px;
 }
 #pick-btn {
   background-color: #00E054;
@@ -92,7 +93,7 @@ h1 {
   cursor: pointer;
   font-size: 14px;
   font-weight: bold;
-  padding: 9px;
+  padding: 8px;
   width: 100%;
 }
 #pick-btn:hover {
@@ -107,6 +108,7 @@ footer {
   color: #555;
   font-size: 10px;
   text-align: center;
-  margin-top: auto;
-  padding-bottom: 6px;
+  position: fixed;
+  bottom: 6px;
+  width: 100%;
 }
