--- a/popup/popup.css
+++ b/popup/popup.css
@@ -111,6 +111,10 @@ h1 {
   display: block;
   height: auto;
   width: 100%;
+  padding-left: 12px;
+  padding-right: 12px;
+  border-radius: 8px;
+  box-sizing: border-box;
 }
 .result-info {
   display: flex;
