--- a/popup/popup.css
+++ b/popup/popup.css
@@ -110,10 +110,11 @@ h1 {
 #result-poster {
   display: block;
   height: auto;
-  width: 100%;
-  padding-left: 12px;
-  padding-right: 12px;
-  border-radius: 8px;
+  width: calc(100% - 24px);
+  margin: 0 12px;
+  padding: 0;
+  border: transparent 1px #DEF;
+  border-radius: 6px;
   box-sizing: border-box;
 }
 .result-info {
