--- a/popup/popup.css
+++ b/popup/popup.css
@@ -29,6 +29,57 @@ h1 {
   margin: 0;
 }
 
+/* State 0 */
+#welcome-back {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex: 1;
+  gap: 18px;
+  padding: 12px;
+}
+#welcome-back p {
+  color: white;
+  font-size: 16px;
+  text-align: left;
+  margin: 0;
+}
+#welcome-back p span {
+  text-transform: capitalize;
+  color: #ff8000;
+  font-weight: bold;
+}
+#welcome-go-btn {
+  background-color: #00E054;
+  border: none;
+  border-radius: 6px;
+  color: #15181C;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: -6px;
+  padding: 8px;
+  width: 100%;
+}
+#welcome-go-btn:hover {
+  background-color: #00F060;
+}
+#change-user-btn {
+  background: none;
+  border: none;
+  color: #555;
+  cursor: pointer;
+  font-size: 12px;
+  margin-bottom: 24px;
+  padding: 0;
+  text-align: center;
+  text-decoration: underline;
+  width: 100%;
+}
+#change-user-btn:hover {
+  color: #888;
+}
+
 /* State 1 */
 #not-on-watchlist {
   display: flex;
